# cmake-tutorial

base-tutorial/: CMakeLists.txt  README.md  build.sh  runhello.sh
base-tutorial/docs/: test.txt
base-tutorial/src/: hello.cpp  hello.h  main.cpp
lesson2/: CMakeLists.txt  build.sh  main.cpp
lesson3/: CMakeLists.txt  README.md  main.cpp
lesson3/bar/: CMakeLists.txt  bar.cpp  bar.h
lesson3/foo/: foo.cpp  foo.h
lesson4/: CMakeLists.txt  build.sh
lesson4/common/: log.cpp  math.cpp  math.h
lesson5/: CMakeLists.txt  build.sh
lesson5/client/: CMakeLists.txt  main.cpp
lesson5/common/: CMakeLists.txt  log.h
lesson5/server/: CMakeLists.txt  main.cpp
lesson5/test/: CMakeLists.txt  main.cpp
